# HexTeam_NuclearHack_popleft

./: .dockerignore  .gitignore  .mypy.ini  .ruff.toml  Dockerfile  README.md  discovery.py  docker-compose.yml  main.py  pyproject.toml
app/: __main__.py  discovery.py  peer.py  routes.py  routing.py  server.py  settings.py
app/api/: __init__.py  auth.py  call.py  files.py  peer.py  ping.py
app/core/: __init__.py  logger.py  parse_message.py  settings.py  utils.py
app/crud/: file_transfers.py  keys.py  messages.py  users.py
app/crypto/: __init__.py  crypto.py
app/database/: database.py
app/database/schemas/: file_transfers.sql  messages.sql  users.sql
app/network/: __init__.py  buffer.py  routing.py  ws_manager.py
app/protocol/: __init__.py  ack.py  call.py  file_ack.py  file_chunk.py  key_exchange.py  message.py  packet.py  ping.py  routes.py  type.py
app/static/: demo.html  index.html
docs/: PROTOCOL.md
static/: index.html
