[project]
name = "hexteam-nuclearhack-popleft"
version = "0.1.0"
description = "LAN Peer Discovery — прототип обнаружения пиров в локальной сети"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pynacl>=1.6.2",
    "python-multipart>=0.0.22",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
]

[dependency-groups]
lint = [
    "mypy>=1.19.1",
    "ruff>=0.15.5",
]
